Updated text-align: center for hero_footer
Line 233:
.hero_footer {
	color: #ffffff;
	text-align: center; --> it was left

--- a/css/CY_template8.css
+++ b/css/CY_template8.css
@@ -230,7 +230,7 @@ a:active {
 /* */
 .hero_footer {
 	color: #ffffff;
-	text-align: left;
+	text-align: center;
 	margin: 0;
 	letter-spacing: 4px;
 	padding-top: 1px;
